# shield-controller

./: .env.example  .gitignore  Dockerfile  README.md  configmap.yaml  dev-requirements.txt  docker-compose.yaml  generate_grpc.sh  pyproject.toml  requirements.txt  sync_controller.py  sync_service_pb2.py  sync_service_pb2_grpc.py  test_grpc_connection.py
.github/workflows/: docker-publish.yml  release.yml  trivy.yml
k8s/: deployment.yaml  install.sh  nginx-unsecure.yaml
